First GREAT launch on mac os 10.14.6: 1. Removed missed SDK 2 2. Fixed auto completion (it used SDK 2 as default) 3. Fixed compilation of qemu (forked and fixed a couple of code issues) 4. Fixed fake s3 by using of other image (not sure there was an issue in first place) 5. Lunched a test application on mac os 10.14.6

--- a/cloudpebble/Dockerfile
+++ b/cloudpebble/Dockerfile
@@ -42,12 +42,12 @@ RUN curl -o /tmp/arm-cs-tools.tar https://cloudpebble-vagrant.s3.amazonaws.com/a
 ADD requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
-ENV SDK_TWO_VERSION=2.9
+# ENV SDK_TWO_VERSION=2.9
 
 # Install SDK 2
-RUN mkdir /sdk2 && \
-  curl -L "https://s3.amazonaws.com/assets.getpebble.com/sdk3/sdk-core/sdk-core-${SDK_TWO_VERSION}.tar.bz2" | \
-  tar --strip-components=1 -xj -C /sdk2
+#RUN mkdir /sdk2 && \
+#  curl -L "https://s3.amazonaws.com/assets.getpebble.com/sdk3/sdk-core/sdk-core-${SDK_TWO_VERSION}.tar.bz2" | \
+#  tar --strip-components=1 -xj -C /sdk2
 
 ENV SDK_THREE_CHANNEL=beta
 ENV SDK_THREE_VERSION=4.3
