--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,13 @@ web:
     - RUN_WEB="yes"
     - AWS_ENABLED="yes"
     - PORT=80
-    - AWS_S3_FAKE_S3=192.168.99.100:8003
-    - MEDIA_URL=http://192.168.99.100:8003/builds.cloudpebble.net/
-    - QEMU_URLS=http://192.168.99.100:8001/
-    - YCM_URLS=http://192.168.99.100:8002/
-    - PUBLIC_URL=http://192.168.99.100/
+    # On MAC - go to your settings -> Network -> copy IP address
+    # NOTE: you can NOT use 127.0.0.1 or 0.0.0.0 because it will be the machine's IP address, not your PC's address
+    - AWS_S3_FAKE_S3=192.168.76.5:8003
+    - MEDIA_URL=http://192.168.76.5:8003/builds.cloudpebble.net/
+    - QEMU_URLS=http://192.168.76.5:8001/
+    - YCM_URLS=http://192.168.76.5:8002/
+    - PUBLIC_URL=http://192.168.76.5/
     - LIBPEBBLE_PROXY=wss://cloudpebble-ws.herokuapp.com/tool
     - PEBBLE_AUTH_URL=https://auth.rebble.io
 celery:
@@ -34,8 +36,8 @@ celery:
     - DEBUG="yes"
     - RUN_CELERY="yes"
     - AWS_ENABLED=yes
-    - EXPORT_ROOT=http://192.168.99.100:8003/export.cloudpebble.net/
-    - AWS_S3_FAKE_S3=192.168.99.100:8003
+    - EXPORT_ROOT=http://192.168.76.5/export.cloudpebble.net/
+    - AWS_S3_FAKE_S3=192.168.76.5:8003
 qemu:
   build: cloudpebble-qemu-controller/
   volumes:
@@ -53,6 +55,6 @@ redis:
 postgres:
   image: postgres
 s3:
-  image: lphoward/fake-s3
+  image: kuracloud/fake-s3
   ports:
     - "8003:4569"
