Change local ip and fix build issues

--- a/cloudpebble/Dockerfile
+++ b/cloudpebble/Dockerfile
@@ -23,7 +23,7 @@ RUN npm install -g npm jshint
 # Fix broken sources.list (jessie repositories have been archived)
 RUN printf "deb http://archive.debian.org/debian/ jessie main\ndeb-src http://archive.debian.org/debian/ jessie main\ndeb http://security.debian.org jessie/updates main\ndeb-src http://security.debian.org jessie/updates main" > /etc/apt/sources.list
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --force-yes \
     gettext \
     postgresql-client libpq-dev \
   --no-install-recommends && rm -rf /var/lib/apt/lists/*
